fix color contrast issue with the instance list

--- a/src/DetailsView/Styles/detailsview.scss
+++ b/src/DetailsView/Styles/detailsview.scss
@@ -543,6 +543,7 @@ div.insights-file-issue-details-dialog-container {
                         margin-top: 4px;
                     }
                     .property-bag-div {
+                        color: $secondary-text;
                         .expanded-property-div {
                             margin-left: 20px;
                         }
